UI changes + time

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,7 +16,7 @@
             Foodlog
           <% end %>
         </h1>
-        <%= link_to "Create new entry", new_entry_path, class: "button is-success " %>
+        <%= link_to "Create new entry", new_entry_path, class: "button is-primary " %>
       </div>
     </section>
   </body>
