--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,10 +1,9 @@
-<p style="color: green"><%= notice %></p>
-
+<div class="has-text-primary">
+  <%= notice %>
+</div>
 <%= render @entry %>
-
 <div>
   <%= link_to "Edit this entry", edit_entry_path(@entry) %> |
   <%= link_to "Back to entries", entries_path %>
-
   <%= button_to "Destroy this entry", @entry, method: :delete %>
 </div>
